kubernetes-hello/k8s-showcase/case-nginx-web-plan/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-world
  name: ingress-nginx
  labels:
    app: nginx
    tier: gateway
    env: debug
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
